--- a/graduatetracer/tracer/templates/tracer/admin/advertise.html
+++ b/graduatetracer/tracer/templates/tracer/admin/advertise.html
@@ -73,7 +73,7 @@
 
   <div class="container">
     <div class="card o-hidden mt-3 border-0 shadow-sm ">
-      <div class="card-header  h3 bg-c-lite-green text-black">
+      <div class="card-header  h3 bg-c-lite-green text-white">
         <div class="card-title">
           Advertise Jobs
         </div>
@@ -160,7 +160,7 @@
   </div>
 
 <div class="card shadow-sm m-3">
-  <div class="card-header bg-c-lite-green text-center text-black">
+  <div class="card-header bg-c-lite-green text-center text-white">
     <h2 class="card-title">Job Categories</h2>
   </div>
   <div class="card-body">
@@ -172,7 +172,7 @@
             <th class="th-w-20" style="white-space: nowrap">Description</th>
             <th class="th-w-20" style="white-space: nowrap"colspan="2">Settings</th>
           </tr>
-        </thead> 
+        </thead>
         <tbody class="text-center">
           {% for job_category in job_categories %}
           <tr>
