--- a/graduatetracer/tracer/templates/tracer/admin/index.html
+++ b/graduatetracer/tracer/templates/tracer/admin/index.html
@@ -123,8 +123,8 @@
           <!-- Analytics -->
           <div class="card shadow-sm mb-4">
               <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between bg-gradient-success">
-                
-                  <h6 class="m-0 font-weight-bold text-black"><i class="fas fa-fw fa-chart-area mr-2"></i>Registered Graduates: {{count_approved}}</h6>
+
+                  <h6 class="m-0 font-weight-bold text-white"><i class="fas fa-fw fa-chart-area mr-2"></i>Registered Graduates: {{count_approved}}</h6>
               </div>
               <div class="card-body">
                   <canvas id="analyticsChart" style="width:100%;max-width:600px"></canvas>
@@ -164,7 +164,7 @@
           <!-- About Recommender System -->
           <div class="card shadow-sm mb-4">
               <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between bg-gradient-info">
-                  <h6 class="m-0 font-weight-bold text-black"><i class="mr-2 fas fa-info-circle"></i>About</h6>
+                  <h6 class="m-0 font-weight-bold text-white"><i class="mr-2 fas fa-info-circle"></i>About</h6>
               </div>
               <div class="card-body">
                   <div class="text-center">
@@ -229,7 +229,7 @@
             <div class="col-lx-6 col-lg-6">
               <div class="card shadow-sm mb-4">
                   <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between bg-gradient-primary">
-                      <h6 class="m-0 font-weight-bold text-black"><i class="mr-2 fas fa-vote-yea"></i>Voting Progress</h6>
+                      <h6 class="m-0 font-weight-bold text-white"><i class="mr-2 fas fa-vote-yea"></i>Voting Progress</h6>
                   </div>
                   <div class="card-body">
                     <canvas id="votingChart" class="w-100"></canvas>
@@ -274,7 +274,7 @@
                 <!-- Help -->
                 <div class="card shadow-sm mb-4">
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between bg-gradient-secondary">
-                        <h6 class="m-0 font-weight-bold text-black"><i class="mr-2 fas fa-question-circle"></i>Guide</h6>
+                        <h6 class="m-0 font-weight-bold text-white"><i class="mr-2 fas fa-question-circle"></i>Guide</h6>
                     </div>
                     <div class="card-body">
                       <p>To help lessen unemployment among college graduates, you can give them job opportunities
