--- a/graduatetracer/tracer/templates/tracer/adminreal/create_user_management.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/create_user_management.html
@@ -23,7 +23,7 @@
   </style>
   <div class="container">
     <div class="card o-hidden mt-3 border-0 shadow-sm ">
-      <div class="card-header  h3 bg-gradient-info text-black">
+      <div class="card-header  h3 bg-gradient-info text-white">
         <div class="card-title">
           Admin Creation
         </div>
