--- a/graduatetracer/tracer/templates/tracer/adminreal/display_user_management.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/display_user_management.html
@@ -39,7 +39,7 @@
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3 bg-gradient-info">
-            <h6 class="m-0 font-weight-bold text-black">ADMIN SAO ACCOUNTS</h6>
+            <h6 class="m-0 font-weight-bold text-white">ADMIN SAO ACCOUNTS</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="card-header py-3 bg-gradient-info">
-            <h6 class="m-0 font-weight-bold text-black">SYSTEM ADMIN ACCOUNTS</h6>
+            <h6 class="m-0 font-weight-bold text-white">SYSTEM ADMIN ACCOUNTS</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="card-header py-3 bg-gradient-info">
-            <h6 class="m-0 font-weight-bold text-black">ADMIN DEAN ACCOUNTS</h6>
+            <h6 class="m-0 font-weight-bold text-white">ADMIN DEAN ACCOUNTS</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -138,7 +138,7 @@
             </div>
         </div>
         <div class="card-header py-3 bg-gradient-info">
-            <h6 class="m-0 font-weight-bold text-black">ADMIN CAMPUS DIRECTOR ACCOUNTS</h6>
+            <h6 class="m-0 font-weight-bold text-white">ADMIN CAMPUS DIRECTOR ACCOUNTS</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -171,7 +171,7 @@
             </div>
         </div>
         <div class="card-header py-3 bg-gradient-info">
-            <h6 class="m-0 font-weight-bold text-black">ADMIN UNIVERSITY PRESIDENT ACCOUNTS</h6>
+            <h6 class="m-0 font-weight-bold text-white">ADMIN UNIVERSITY PRESIDENT ACCOUNTS</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
