--- a/graduatetracer/tracer/templates/tracer/admin/announcement.html
+++ b/graduatetracer/tracer/templates/tracer/admin/announcement.html
@@ -8,7 +8,7 @@
 
   <div class="container">
     <div class="card o-hidden mt-3 border-0 shadow-sm ">
-      <div class="card-header  h3 bg-c-lite-green text-black">
+      <div class="card-header  h3 bg-c-lite-green text-white">
         <div class="card-title">
           Announcement
         </div>
