--- a/graduatetracer/tracer/templates/tracer/admin/categorized_jobs.html
+++ b/graduatetracer/tracer/templates/tracer/admin/categorized_jobs.html
@@ -6,7 +6,7 @@
     <div class="row">
     <div class="leftcolumn">
       <div class="card mb-4 mt-4 mr-2 ml-2 shadow-sm">
-        <div class="card-header pl-3 pr-4 pt-3 pb-0 m-0 bg-gradient-info text-black card-title">
+        <div class="card-header pl-3 pr-4 pt-3 pb-0 m-0 bg-gradient-info text-white card-title">
           <h2 class="text-center">{{category.title}}</h2>
         </div>
         <div class="card-body">
@@ -16,7 +16,7 @@
     </div>
     <div class="rightcolumn">
       <div class="card mb-4 mt-4 mr-2 ml-2 shadow-sm">
-        <div class="card-header pl-3 pr-4 pt-3 pb-0 m-0 bg-gradient-info text-black card-title">
+        <div class="card-header pl-3 pr-4 pt-3 pb-0 m-0 bg-gradient-info text-white card-title">
             <h3>Filter</h3>
         </div>
         <div class="card-body">
@@ -39,7 +39,7 @@
     {% for ad in ads %}
     {% if ad.job_category.id == category.id %}
       <div class="card mb-4 mt-4 mr-2 ml-2 shadow-sm">
-        <div class="card-header pl-3 pr-4 pt-3 pb-0 m-0 bg-c-lite-green text-black">
+        <div class="card-header pl-3 pr-4 pt-3 pb-0 m-0 bg-c-lite-green text-white">
           <div class="card-title">
             <div class="row">
               <div class="col-11">
