--- a/graduatetracer/tracer/templates/tracer/admin/update_advertisement.html
+++ b/graduatetracer/tracer/templates/tracer/admin/update_advertisement.html
@@ -8,13 +8,13 @@
     <div class="container">
       <div class="col-12">
         <div class="card shadow-sm">
-          <div class="card-header h3 bg-c-lite-green text-black pb-3">
+          <div class="card-header h3 bg-c-lite-green text-white pb-3">
             <div class="card-title h3 row">
               <div class="col-11 pl-2 pt-1">
                 Update Job
               </div>
               <div class="col-1 pr-2 pt-1">
-                <a class="btn bg-gradient-info text-black shadow-lg" href="{% url 'browser' %}">Back</a>
+                <a class="btn bg-gradient-info text-white shadow-lg" href="{% url 'browser' %}">Back</a>
               </div>
             </div>
           </div>
