--- a/graduatetracer/tracer/templates/tracer/adminreal/admindash.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/admindash.html
@@ -103,7 +103,7 @@
           <!-- About Recommender System -->
           <div class="card shadow-sm mb-4">
               <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between bg-gradient-info">
-                  <h6 class="m-0 font-weight-bold text-black"><i class="mr-2 fas fa-info-circle"></i>About</h6>
+                  <h6 class="m-0 font-weight-bold text-white"><i class="mr-2 fas fa-info-circle"></i>About</h6>
               </div>
               <div class="card-body">
                   <div class="text-center">
@@ -129,7 +129,7 @@
                 <!-- Help -->
                 <div class="card shadow-sm mb-4">
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between bg-gradient-secondary">
-                        <h6 class="m-0 font-weight-bold text-black"><i class="mr-2 fas fa-question-circle"></i>Guide</h6>
+                        <h6 class="m-0 font-weight-bold text-white"><i class="mr-2 fas fa-question-circle"></i>Guide</h6>
                     </div>
                     <div class="card-body">
                       <p>To help lessen unemployment among college graduates, you can give them job opportunities
