--- a/graduatetracer/tracer/templates/tracer/adminreal/school_report.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/school_report.html
@@ -39,7 +39,7 @@
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3 bg-gradient-info">
-            <h6 class="m-0 font-weight-bold text-black">SCHOOL REPORTS</h6>
+            <h6 class="m-0 font-weight-bold text-white">SCHOOL REPORTS</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
