--- a/graduatetracer/tracer/templates/tracer/user/jobs_available.html
+++ b/graduatetracer/tracer/templates/tracer/user/jobs_available.html
@@ -22,11 +22,6 @@
     .dataTables_length{
       z-index: 2;
     }
-
-    .dataTables_filter{
-      display: none;
-    }
-
     .dropdown-filter{
       top: 33px !important;
       position: relative;
@@ -63,17 +58,17 @@
 
 <div class="row">
   <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
-    <a href="#" class="btn bg-c-tile text-black shadow-lg" onclick="return show('Page1','Page2');"><h6>Tile View</h6></a>
+    <a href="#" class="btn bg-c-tile text-white shadow-lg" onclick="return show('Page1','Page2');"><h6>Tile View</h6></a>
   </div>
   <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
-    <a href="#" class="btn bg-c-tile text-black shadow-lg" onclick="return show('Page2','Page1');"><h6>List View</h6></a>
+    <a href="#" class="btn bg-c-tile text-white shadow-lg" onclick="return show('Page2','Page1');"><h6>List View</h6></a>
   </div>
 
 
 </div>
 
 
-<div id="Page2" class="container bg-white pr-4 pl-4 pb-3" style="display:none;">
+<div id="Page2" class="container-fluid bg-white pr-4 pl-4 pb-3" style="display:none;">
   <div class="row ">
 
     <div class="row w-20">
@@ -93,6 +88,16 @@
       </div>
       <div class="col-xs-6 col-sm-9 col-md-9 col-lg-3 col-xl-3 p-1">
         <select id="query1" class="form-control" name="">
+          <option value="">Address</option>
+        {% for query in query_address_1 %}
+          {% if query %}
+          <option value="{{query}}">{{query}}</option>
+          {% endif %}
+        {% endfor %}
+        </select>
+      </div>
+      <div class="col-xs-6 col-sm-9 col-md-9 col-lg-3 col-xl-3 p-1">
+        <select id="query2" class="form-control" name="">
           <option value="">Category</option>
         {% for query in query_category %}
           {% if query %}
@@ -102,7 +107,7 @@
         </select>
       </div>
       <div class="col-xs-6 col-sm-9 col-md-9 col-lg-3 col-xl-3 p-1">
-        <select id="query2" class="form-control" name="">
+        <select id="query3" class="form-control" name="">
           <option value="">Salary</option>
         {% for query in query_salary %}
           {% if query %}
@@ -113,37 +118,41 @@
       </div>
     </div>
   </div>
-  <table id="jobs" class="display table table-bordered table-responsive w-100 pt-4">
+  <table id="jobs" class="display table table-bordered table-responsive w-100">
       <thead>
           <tr>
-              <th class="th-w-20" style="white-space: nowrap">Company</th>
-              <th class="th-w-20" style="white-space: nowrap">Job Name</th>
-              <th class="th-w-20" style="white-space: nowrap">Category</th>
-              <th class="th-w-20" style="white-space: nowrap">Salary</th>
-              <th class="th-w-10" style="white-space: nowrap">Date Created</th>
-              <th class="th-w-10" style="white-space: nowrap">Option</th>
+            <th class="th-w-20" style="white-space: nowrap">Company</th>
+            <th class="th-w-20" style="white-space: nowrap">Job Name</th>
+            <th class="th-w-20" style="white-space: nowrap">Address</th>
+            <th class="th-w-20" style="white-space: nowrap">Category</th>
+            <th class="th-w-20" style="white-space: nowrap">Salary</th>
+            <th class="th-w-20" style="white-space: nowrap">Option</th>
           </tr>
       </thead>
       <tbody>
         {% for ad in ads %}
           <tr>
-              <td>
+              <td class="th-w-20" style="white-space: nowrap">
                 {% if ad.name%}
                   {{ad.name}}
                 {% endif %}
               </td>
-              <td>{{ad.title}}</td>
-              <td>
+              <td class="th-w-20" style="white-space: nowrap">{{ad.title}}</td>
+              <td class="th-w-20" style="white-space: nowrap">
+                {% if ad.address_1 %}
+                  {{ad.address_1}}
+                {% endif %}
+              </td>
+              <td class="th-w-20" style="white-space: nowrap">
                   {% if ad.job_category %}
                     {{ad.job_category}}
                   {% endif %}
               </td>
-              <td>
+              <td class="th-w-20" style="white-space: nowrap">
                 {% if ad.salary %}
                   {{ad.salary}}
                 {% endif %}
               </td>
-              <td>{{ad.date_created|naturalday}}</td>
               <td class="text-center"><a href="{% url 'view_ads' ad.id %}"><i class="fas fa-eye"></i></a></td>
           </tr>
         {% endfor %}
