--- a/graduatetracer/tracer/templates/tracer/user/post_list.html
+++ b/graduatetracer/tracer/templates/tracer/user/post_list.html
@@ -7,7 +7,7 @@
     <div class="col-lg-9 mt-1 ">
         <div class="row justify-content-center mt-4 mb-5">
 
-            <div class="card w-80 ">
+            <div style="margin-top: 40px;"class="card w-80 ">
                 <div class="card-header">
                     <strong>ADD POST!</strong>
                 </div    >
@@ -119,7 +119,7 @@
                     <div class="modal-content">
 														<form method="POST" action="">
 															{% csrf_token %}
-															<div class="card-header bg-c-lite-green text-white">
+															<div class="card-header text-white">
 
 																<div class="row">
 																		{% if users_info.profile_picture %}
@@ -134,64 +134,57 @@
 																</div>
 															</div>
 															<div class="card-body">
-																{% for grad_info in grad_infos %}
-														      {% if grad_info.approved %}
-														        {% if grad_info.email != request.user.email %}
-																			<div class="row">
-																				<div class="col-lg-12">
-																					<p>Email Address: {{grad_info.email}}</p>
-																				</div>
-																			</div>
 
-																				<div class="row">
-																					<div class="col-lg-6">
-																						<p>Address: {{grad_info.address}}</p>
-																					</div>
-																					<div class="col-lg-6">
-																						<p>Contact Number: {{grad_info.contactnum}}</p>
-																					</div>
-																				</div>
-																				<div class="row">
-																					<div class="col-lg-6">
-																						<p>Birth Date: {{grad_info.bdate}}</p>
-																					</div>
-																					<div class="col-lg-6">
-																						<p>Age: {{grad_info.age}}</p>
-																					</div>
-																				</div>
-																				<div class="row">
-																					<div class="col-lg-6">
-																						<p>Gender: {{grad_info.gender}}</p>
-																					</div>
-																					<div class="col-lg-6">
-																						<p>Year Graduated: {{grad_info.year_graduated}}</p>
-																					</div>
-																				</div>
-																				<div class="row">
-																					<div class="col-lg-6">
-																						<p>Skills: {{grad_info.skill}}</p>
-																					</div>
-																					<div class="col-lg-6">
-																						<p>Job Description: {{grad_info.job_description}}</p>
-																					</div>
+  																			<div class="row">
+  																				<div class="col-lg-12">
+  																					<p>Email Address: {{grad_info.email}}</p>
+  																				</div>
+  																			</div>
 
-																				</div>
-																				<div class="row">
-																					<div class="col-lg-6">
-																						<p>Work Experiences: {{grad_info.workExperiences}}</p>
-																					</div>
-																					<div class="col-lg-6">
-																						<p></p>
-																					</div>
-
-																				</div>
-																				<div class="modal-footer">
-																        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-																      </div>
-																		</div>
-																	{% endif %}
-																{% endif %}
-															{% endfor %}
+  																			<div class="row">
+  																				<div class="col-lg-6">
+  																					<p>Address: {{grad_info.address}}</p>
+  																				</div>
+  																				<div class="col-lg-6">
+  																					<p>Contact Number: {{grad_info.contactnum}}</p>
+  																				</div>
+  																			</div>
+  																			<div class="row">
+  																				<div class="col-lg-6">
+  																					<p>Birth Date: {{grad_info.bdate}}</p>
+  																				</div>
+  																				<div class="col-lg-6">
+  																					<p>Age: {{grad_info.age}}</p>
+  																				</div>
+  																			</div>
+  																			<div class="row">
+  																				<div class="col-lg-6">
+  																					<p>Gender: {{grad_info.gender}}</p>
+  																				</div>
+  																				<div class="col-lg-6">
+  																					<p>Year Graduated: {{grad_info.year_graduated}}</p>
+  																				</div>
+  																			</div>
+  																			<div class="row">
+  																				<div class="col-lg-6">
+  																					<p>Skills: {{grad_info.skill}}</p>
+  																				</div>
+  																				<div class="col-lg-6">
+  																					<p>Job Description: {{grad_info.job_description}}</p>
+  																				</div>
+  																			</div>
+  																			<div class="row">
+  																				<div class="col-lg-6">
+  																					<p>Work Experiences: {{grad_info.workExperiences}}</p>
+  																				</div>
+  																				<div class="col-lg-6">
+  																					<p></p>
+  																				</div>
+  																			</div>
+  																			<div class="modal-footer">
+  															        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+  															      </div>
+  																	</div>
 															</form>
 													</div>
 
