--- a/graduatetracer/tracer/templates/tracer/user/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/user/sidebar.html
@@ -2,7 +2,7 @@
 <ul class="navbar-nav bg-c-lite-green sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'DashboardUser' %}">
       <div class="sidebar-brand-icon">
         <img class= "w3-round" src="{% static 'img/GradTracerLogo.png' %}" style="width: 85px; height:75px;">
       </div>
@@ -109,6 +109,4 @@
     <div class="text-center d-none d-md-inline">
         <button class="rounded-circle border-0" id="sidebarToggle"></button>
     </div>
-
-
 </ul>
