--- a/graduatetracer/tracer/templates/tracer/admin/index.html
+++ b/graduatetracer/tracer/templates/tracer/admin/index.html
@@ -7,7 +7,7 @@
 
       <div class="row">
 
-        <div class="col-xl-6 col-md-6 mb-4">
+          <div class="col-xl-4 col-md-6 mb-4">
             <div class="card border-left-info shadow-sm h-100 py-2">
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
@@ -23,7 +23,22 @@
                 </div>
             </div>
         </div>
-
+        <div class="col-xl-2 col-md-6 mb-4">
+            <div class="card border-left-warning shadow-sm h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                Users</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{count_users}}</div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fas fa-users fa-2x text-gray-800"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
           <!-- Jobs Advertised / Posted -->
           <div class="col-xl-3 col-md-6 mb-4">
               <div class="card border-left-success shadow-sm h-100 py-2">
@@ -129,8 +144,8 @@
               <div class="card-body">
                   <canvas id="analyticsChart" style="width:100%;max-width:600px"></canvas>
                   <script>
-                  var xValues = ["Employed","Unemployed"];
-                  var yValues = [{{count_employed}},{{count_unemployed}}];
+                  var xValues = ["Employed","Unemployed", "Approved", "Pending"];
+                  var yValues = [{{count_employed}},{{count_unemployed}},{{count_approved}},{{count_pending}}];
 
                   var barColors = ["#1E90FF", "#FFC0CB", "#00FF7F", "#FF6347",];
 
