--- a/graduatetracer/tracer/templates/tracer/adminreal/admindash.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/admindash.html
@@ -44,16 +44,16 @@
                   <div class="card-body">
                       <div class="row no-gutters align-items-center">
                           <div class="col mr-2">
-                              <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Pending
+                              <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Employed
                               </div>
                               <div class="row no-gutters align-items-center">
                                   <div class="col-auto">
-                                      <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">{{count_pending}} </div>
+                                      <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">{{count_employed}} </div>
                                   </div>
                                   <div class="col">
                                       <div class="progress progress-sm mr-2">
                                           <div class="progress-bar bg-warning" role="progressbar"
-                                              style="width: {% widthratio count_pending count_users 100 %}%" aria-valuenow="{% widthratio count_employed count_users 100 %}" aria-valuemin="0"
+                                              style="width: {% widthratio count_approved count_users 100 %}%" aria-valuenow="{% widthratio count_employed count_users 100 %}" aria-valuemin="0"
                                               aria-valuemax="100"></div>
                                       </div>
                                   </div>
@@ -73,11 +73,11 @@
                   <div class="card-body">
                       <div class="row no-gutters align-items-center">
                           <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Approved
+                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Unemployed
                             </div>
                             <div class="row no-gutters align-items-center">
                                 <div class="col-auto">
-                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">{{count_approved}} </div>
+                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">{{count_unemployed}} </div>
                                 </div>
                                 <div class="col">
                                     <div class="progress progress-sm mr-2">
