--- a/graduatetracer/tracer/templates/tracer/admin/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/admin/topbar.html
@@ -11,7 +11,7 @@
 </style>
 <!-- Topbar -->
 <form class="" action="" method="GET">
-  <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow" style="position:fixed; width:90%!important; z-index:1;">
+  <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow" style="position:fixed; width:100%!important; z-index:1; left:0;right:0;">
 
       <!-- Sidebar Toggle (Topbar) -->
 
