--- a/graduatetracer/tracer/templates/tracer/user/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/user/topbar.html
@@ -7,7 +7,7 @@
     top: 22px;
   }
 </style>
-<nav class="navbar navbar-expand navbar-light bg-gradient-warning topbar mb-4 static-top shadow">
+<nav style="position: fixed; z-index: 1; top: 0; width: 100% !important; left: 0; right: 0;" class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
     <!-- Sidebar Toggle (Topbar) -->
     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
@@ -18,13 +18,13 @@
     <ul class="navbar-nav ml-auto">
 
         <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-        <li class="nav-item dropdown no-arrow d-sm-none">
+        <!-- <li class="nav-item dropdown no-arrow d-sm-none">
             <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-search fa-fw"></i>
-            </a>
+            </a> -->
             <!-- Dropdown - Messages -->
-            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
+            <!-- <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
                 aria-labelledby="searchDropdown">
                 <form class="form-inline mr-auto w-100 navbar-search">
                     <div class="input-group">
@@ -39,7 +39,7 @@
                     </div>
                 </form>
             </div>
-        </li>
+        </li> -->
 
 
               <!-- Topbar Navbar -->
