--- a/graduatetracer/tracer/templates/tracer/adminreal/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/topbar.html
@@ -7,7 +7,7 @@
   }
 </style>
 <!-- Topbar -->
-  <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+  <nav style="position: fixed; z-index: 1; top: 0; width: 100% !important; left: 0; right: 0;" class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
       <!-- Sidebar Toggle (Topbar) -->
       <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
