--- a/graduatetracer/tracer/templates/tracer/firstInterface/register.html
+++ b/graduatetracer/tracer/templates/tracer/firstInterface/register.html
@@ -48,7 +48,7 @@
                         {{ form.last_name }}
                       </div>
 											<div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                        <label for="inputCourse" class="form-label" Required="IDNum">ID Number</label>
+                        <label for="inputIDNum" class="form-label" Required="IDNum">ID Number</label>
 												{{form.IDNum}}
                       </div>
 											<div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -56,8 +56,8 @@
                         {{ form.email }}
                       </div>
                       <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                        <label for="inputCourse" class="form-label" Required="course_type">Course Type</label>
-                        {{ form.course_type}}
+                        <label for="inputCoursetype" class="form-label" Required="course_type">Course Type</label>
+                        {{form.course_type}}
                       </div>
 											<div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                         <label for="inputSchool" class="form-label" Required="school">School</label>
