--- a/graduatetracer/tracer/templates/tracer/systemadmin/usergrad_info.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/usergrad_info.html
@@ -12,11 +12,11 @@
       <div class="row m-l-0 m-r-0">
           <div class="col-sm-12 col-md-12 col-lg-4 bg-gradient-info user-profile">
             <div class="col-lg-1 mr-auto">
-                <a class="btn bg-c-lite-green text-black shadow-lg" href="{% url 'user' %}">Back</a>
+                <a class="btn bg-c-lite-green text-white shadow-lg" href="{% url 'user_graduates' %}">Back</a>
             </div>
             <div class="card-block text-center text-white">
                 <div class="m-b-25">{% if user_info.profile_picture %}<img  src="{{user_info.profile_picture.url}}" width="120" height="110" class="img-profile rounded-circle shadow-lg" alt="User-Profile-Image">{% endif %}</div>
-                <h6 class="f-w-600">{{ user_info.first_name }} {{ user_info.middle_name }} {{ user_info.last_name }}</h6>
+                <h6 class="f-w-600">{{ user_info.first_name }} {{ user_info.middle }} {{ user_info.last_name }}</h6>
             </div>
           </div>
           <div class="col-sm-12 col-md-12 col-lg-8">
@@ -67,7 +67,11 @@
                       </div>
                       <div class="col-xm-12 col-sm-4 col-md-4 col-lg-4 col-xl-3">
                           <p class="m-b-10 f-w-600">Status</p>
-                          {{ user_info.employment_status }}
+                          {% if user_info.employed %}
+                          <h6 class="text-muted mby-1 f-w-400">Employed</h6>
+                          {% elif user_info.unemployed %}
+                          <h6 class="text-muted mby-1 f-w-400">Unemployed</h6>
+                          {% endif %}
                       </div>
                       <div class="col-xm-12 col-sm-12 col-md-12 col-lg-12 col-xl-3">
                           <p class="m-b-10 f-w-600">Skill</p>
