topbar and sidebar gi sticky2 nako, waakoy lingaw

--- a/graduatetracer/tracer/templates/tracer/user/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/user/topbar.html
@@ -7,7 +7,7 @@
     top: 22px;
   }
 </style>
-<nav class="navbar navbar-expand navbar-light bg-gradient-warning topbar mb-4 static-top shadow">
+<nav class="navbar navbar-expand navbar-light bg-gradient-warning topbar mb-4 static-top shadow" style="position:fixed; width:100%!important; z-index:1;left:0; right:0;" >
 
     <!-- Sidebar Toggle (Topbar) -->
     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
