--- a/graduatetracer/static/landingPage/css/landingStyles.css
+++ b/graduatetracer/static/landingPage/css/landingStyles.css
@@ -105,7 +105,7 @@ hr:not([size]) {
     height: 1px;
 }
 
-h6,
+/* h6,
 .h6,
 h5,
 .h5,
@@ -121,7 +121,7 @@ h1,
     margin-bottom: 0.5rem;
     font-weight: 700;
     line-height: 1.2;
-}
+} */
 
 h1,
 .h1 {
