--- a/graduatetracer/tracer/templates/tracer/systemadmin/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/sidebar.html
@@ -39,7 +39,7 @@
               <i class="fas fa-users"></i>
               <span>Admin Management</span>
           </a>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
               <div class="bg-white py-2 collapse-inner rounded">
                   <a class="collapse-item" href="{% url 'create_user_management' %}">Create Admin</a>
                   <a class="collapse-item" href="{% url 'display_user_management' %}">Display Admin</a>
@@ -73,7 +73,7 @@
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
               <div class="bg-white py-2 collapse-inner rounded">
                   <a class="collapse-item" href="{% url 'school_report' %}">School Reports</a>
-                  <a class="collapse-item" href="{% url 'school_record' %}">School Records</a>
+                  <!-- <a class="collapse-item" href="{% url 'school_record' %}">School Records</a> -->
 
               </div>
           </div>
