--- a/graduatetracer/tracer/templates/tracer/firstInterface/landingPage.html
+++ b/graduatetracer/tracer/templates/tracer/firstInterface/landingPage.html
@@ -29,18 +29,17 @@
     <header class="masthead d-flex align-items-center">
         <div class="container px-4 px-lg-5 text-center">
             <div class="timeline-image ">
-                <img class="rounded-circle img-fluid " src="{% static 'landingPage/assets/img/gradpic.png' %}" style="width: 270px; height:275px;" alt=" ... " />
+                <img class="rounded-circle img-fluid " src="{% static 'landingPage/assets/img/gradpic.png' %}" style="width: 220px; height:220px;" alt=" ... " />
             </div>
             <h1 class="responsive-font-example">WELCOME KA-ALMA MATER!!!</h1>
             <i class="fas fa-duotone fa-user-graduate"></i>
-            <h3 class="mb-5 "><em>Cebu Technological University-Ginatilan Campus </em></h3>
-            <h3 class="mb-5 ">Graduate Tracer System </h3>
+            <h3 class="mb-5 "><em>Cebu Technological University </em></h3>
+            <h4 class="mb-5 ">Graduate Tracer System </h4>
 
             <a class="btn btn-primary btn-user btn-block" href="{% url 'login' %}"> Let's Start</a>
         </div>
     </header>
     <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded " href="#page-top "><i class="fas fa-angle-up "></i></a>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "></script>
     <!-- Core theme JS-->
