--- a/graduatetracer/tracer/templates/tracer/firstInterface/welcomeMsg.html
+++ b/graduatetracer/tracer/templates/tracer/firstInterface/welcomeMsg.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>CTU-Ginatilan Login Page</title>
+	<title>CTU Login Page</title>
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
