--- a/graduatetracer/tracer/templates/tracer/user/UpdateInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/UpdateInfo.html
@@ -74,6 +74,10 @@
                 {{grad_info.middle_name}}
               </div>
               <div class="col-md-12 pl-4 pb-3">
+                <label class="labels">Bio</label>
+                {{grad_info.bio}}
+              </div>
+              <div class="col-md-12 pl-4 pb-3">
                 <label class="labels">Last Name</label>
                 {{grad_info.last_name}}
               </div>
