--- a/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
@@ -18,12 +18,11 @@
 
 </div>
 <a href="{% url 'UpdateGradInfo' user.id %}" button class="button-24" role="button">Edit Profile</a>
-
 </div>
 <div class="container-fluid mt-0 h-100 ">
     <div class="row d-flex justify-content-center">
         <div class="col-md-10 mt-5 mb-5">
-            
+
             <form method="POST" action="{% url 'DisplayGradInfo' %}">
                 {% csrf_token %}
             <div class="card mb-3">
@@ -42,7 +41,16 @@
                       <h6 class="mb-0">Email</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{user.email}} 
+                      {{user.email}}
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">School</h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                      {{user.school}}
                     </div>
                   </div>
                   <hr>
@@ -51,7 +59,7 @@
                       <h6 class="mb-0">Phone</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{user.contact_number}} 
+                      {{user.contact_number}}
                     </div>
                   </div>
                   <hr>
@@ -60,7 +68,7 @@
                       <h6 class="mb-0">ID Numbber</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{user.IDNum}} 
+                      {{user.IDNum}}
                     </div>
                   </div>
                   <hr>
@@ -69,17 +77,17 @@
                       <h6 class="mb-0">Age</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{user.age}} 
+                     {{user.age}}
                     </div>
                   </div>
                   <hr>
-                  
+
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0">Gender</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{user.gender}} 
+                     {{user.gender}}
                     </div>
                   </div>
                   <hr>
@@ -88,7 +96,7 @@
                       <h6 class="mb-0">Address</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{user.address}} 
+                     {{user.address}}
                     </div>
                   </div>
                     <hr>
@@ -97,7 +105,7 @@
                       <h6 class="mb-0">Course</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{user.course_type}} 
+                     {{user.course_type}}
                     </div>
                   </div>
                     <hr>
@@ -106,7 +114,7 @@
                       <h6 class="mb-0">Status</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{user.employment_status}} 
+                     {{user.employment_status}}
                     </div>
                   </div>
                       <hr>
@@ -115,7 +123,7 @@
                       <h6 class="mb-0">Job Description</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{user.job_description}} 
+                     {{user.job_description}}
                     </div>
                   </div>
                     <hr>
@@ -124,7 +132,7 @@
                       <h6 class="mb-0">Skill</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{user.skill}} 
+                     {{user.skill}}
                     </div>
                   </div>
 
